<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/dark_blue">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:text="@string/market_name"
            android:textColor="@color/white" />



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_sharing"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="90dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_round_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/webstoreshare"
                    android:textColor="@color/light_grey"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/link"
                        android:textColor="@color/orange"
                        android:textSize="14sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/green"
                        android:drawableLeft="@drawable/ic_whatsapp"
                        android:text="@string/Share"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="#1A146EB4"
                    android:drawableRight="@drawable/ic_rightarrow"
                    android:textAllCaps="false">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_domain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/custom_domain"
                        android:textColor="@color/light_blue"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/text_domain"
                        android:src="@drawable/ic_rightarrow" />
                </RelativeLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_sharing"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="0.50"
                android:text="@string/Overview"
                android:textColor="@color/light_black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/last_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_week"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

            <ImageView

                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/last_week"
                android:src="@drawable/ic_vector__stroke_" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_grid_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/rel_overview"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp">

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="16dp"
            android:numColumns="2"
            android:verticalSpacing="16dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_grid_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="0.50"
                android:text="@string/Active_Orders"
                android:textColor="@color/light_black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

            <ImageView

                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/view"
                android:src="@drawable/ic_vector__stroke_right" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_chip"
        android:layout_below="@+id/activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text=""
                app:chipBackgroundColor="@color/dark_blue"
                android:layout_marginLeft="16dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:text="@string/Active_Orders"
                app:chipBackgroundColor="@color/grey_lightish"
                android:textColor="#808080"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:text="@string/custom_domain"
                app:chipBackgroundColor="@color/grey_lightish"
                android:textColor="#808080"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_chip"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:clipToPadding="false"
            android:id="@+id/listview"
            android:nestedScrollingEnabled="true">

        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
</RelativeLayout>